exports[`<TokenInfoPanel /> snapshot tests matches the snapshot of when a user is creating an annotation 1`] = `
<TokenInfoPanel
  displayProps={
    Object {
      "closeAnnotation": [Function],
      "lineNumber": 0,
      "lineText": "line text",
      "saveAnnotation": [Function],
    }
  }
  displayStatus="create" />
`;

exports[`<TokenInfoPanel /> snapshot tests matches the snapshot of when it displays an annotation 1`] = `
<TokenInfoPanel
  displayProps={
    Object {
      "closeAnnotation": [Function],
      "lineNumber": 0,
      "lineText": "line text",
      "text": "annotation text",
    }
  }
  displayStatus="display" />
`;

exports[`<TokenInfoPanel /> snapshot tests matches the snapshot of when no annotation is being created or displayed  1`] = `
<TokenInfoPanel
  displayProps={Object {}}
  displayStatus="none" />
`;
